[package]
name = "esp-captive-portal-example"
version = "0.1.0"
authors = ["Teddy Byron <ted@tedbyron.com>"]
edition = "2021"
rust-version = "1.71"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver"
]

[dependencies]
anyhow = "1.0.79"
esp-idf-svc = { version = "0.48.0", default-features = false }
log = { version = "0.4", default-features = false }
heapless = "0.8.0"
domain = { version = "0.9.3", default-features = false, features = ["heapless"] }

[build-dependencies]
embuild = "0.31.4"
