[package]
name = "esp-idf-wifi-captive-portal"
description = "Example ESP-IDF captive portal for setting up STA WiFi"
version = "0.1.0"
authors = ["Teddy Byron <ted@tedbyron.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
# nightly = ["esp-idf-svc/nightly"]
# experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver"
]

[dependencies]
anyhow = "1.0.79"
edge-captive = { version = "0.1.0", features = ["std"] }
edge-std-nal-async = "0.1.0"
embedded-nal-async = "0.7.1"
esp-idf-svc = { version = "0.48.0", default-features = false }
heapless = "0.8.0"
log = { version = "0.4", default-features = false }

[build-dependencies]
embuild = "0.31.4"
